--- a/project5_demo.html
+++ b/project5_demo.html
@@ -22,52 +22,52 @@
         <section id="insights" class="insights-container">
             <div class="insight">
                 <div class="insight-header">
-                    <h3>O</h3>
-                    <p class="insight-subtitle">Long-term trend across 20 years.</p>
+                    <h3>Top 3 Valuable Customers</h3>
+                    <p class="insight-subtitle">Most Transactions, Highest Spending, Longest Tenure.</p>
                 </div>
-                <p class="insight-description">The stock’s closing price has shown a consistent upward or downward trend over the past 20 years, reflecting its overall performance.</p>
-                <img src="project4_insight1.png" alt="Insight 1 Image" class="insight-img">
+                <p class="insight-description">Identifies top customers based on transaction frequency, total spending, and longest account duration, revealing key customer value.</p>
+                <img src="project5_insight1.png" alt="Insight 1 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Volume Trends by Year and Month</h3>
-                    <p class="insight-subtitle">Monthly and yearly trading volume patterns.</p>
+                    <h3>Accounts with Most Fraud Cases</h3>
+                    <p class="insight-subtitle">Identifying Accounts with Highest Fraud Counts.</p>
                 </div>
-                <p class="insight-description">Trading volume exhibits seasonal and annual variations, indicating periods of high and low trading activity throughout the year.</p>
-                <img src="project4_insight2.png" alt="Insight 2 Image" class="insight-img">
+                <p class="insight-description">Highlights accounts with the highest number of fraud cases, helping to target and mitigate fraud risk.</p>
+                <img src="project5_insight2.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Average Monthly Returns Analysis</h3>
-                    <p class="insight-subtitle">Returns averaged by each calendar month.</p>
+                    <h3>Fraudulent Transactions by Industry</h3>
+                    <p class="insight-subtitle">Percentage of Fraud by Industry Sector.</p>
                 </div>
-                <p class="insight-description">Monthly average returns reveal patterns and performance variations, helping to identify strong and weak months for the stock.</p>
-                <img src="project4_insight3.png" alt="Insight 3 Image" class="insight-img">
+                <p class="insight-description">Shows the proportion of fraudulent transactions across different industries, revealing which sectors are most vulnerable to fraud.</p>
+                <img src="project5_insight3.png" alt="Insight 3 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Top 5 High Volatility Periods</h3>
-                    <p class="insight-subtitle">Most volatile stock periods identified.</p>
+                    <h3>Customer Lifetime Value (CLV)</h3>
+                    <p class="insight-subtitle">Measuring Total Value Over Customer Relationship.</p>
                 </div>
-                <p class="insight-description">The periods with the highest volatility, measured by price fluctuations or rolling standard deviation, highlight significant market events or instability.</p>
-                <img src="project4_insight4.png" alt="Insight 4 Image" class="insight-img">
+                <p class="insight-description">Calculates the total revenue generated from customers over their lifetime, guiding marketing and retention strategies.</p>
+                <img src="project5_insight4.png" alt="Insight 4 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>Stock Performance Around Major Events</h3>
-                    <p class="insight-subtitle">Performance before and after key events.</p>
+                    <h3>Distribution of Transaction Amounts</h3>
+                    <p class="insight-subtitle">Histplot of All Transaction Amounts.</p>
                 </div>
-                <p class="insight-description">Analyzing stock performance surrounding significant events like market crashes provides insights into how the stock reacts to external shocks.</p>
-                <img src="project4_insight5.png" alt="Insight 5 Image" class="insight-img">
+                <p class="insight-description">Visualizes the distribution of transaction amounts, identifying spending patterns and outliers within the transaction dataset.</p>
+                <img src="project5_insight5.png" alt="Insight 5 Image" class="insight-img">
             </div>
             <div class="insight">
                 <div class="insight-header">
-                    <h3>2020 Yearly Price Variation</h3>
-                    <p class="insight-subtitle">Price variation throughout the year 2020.</p>
+                    <h3>Fraudulent Transaction Amount Distribution</h3>
+                    <p class="insight-subtitle">Bar Plot of Fraudulent Transaction Amounts.</p>
                 </div>
-                <p class="insight-description"> Examining how the closing price varied over 2020 uncovers trends and patterns specific to this year, including responses to market conditions.
+                <p class="insight-description"> Displays the distribution of amounts in fraudulent transactions, highlighting typical fraud values and identifying high-risk transactions.
                 </p>
-                <img src="project4_insight6.png" alt="Insight 2 Image" class="insight-img">
+                <img src="project5_insight6.png" alt="Insight 2 Image" class="insight-img">
             </div>
             <!-- Add more insights as needed -->
         </section>
